--- a/assignment2/main/addRoute.html
+++ b/assignment2/main/addRoute.html
@@ -9,72 +9,115 @@
   <!-- mdl CSS -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+  <link rel='stylesheet'
+    href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.2/mapbox-gl-directions.css'
+    type='text/css' />
   <title>Add Route</title>
   <link rel="stylesheet" href="../css/style.css">
+
+
+
 </head>
 
 <body>
-  <!-- On large displays, the drawer is open, while the header is visibile even on
-      small displays -->
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
-              mdl-layout--fixed-header">
 
-    <header class="mdl-layout__header">
 
+
+
+  <div class="mdl-layout mdl-js-layout">
+    <header class="mdl-layout__header mdl-layout__header--scroll">
       <div class="mdl-layout__header-row">
-
+        <!-- Title -->
+        <span class="mdl-layout-title">Ship Assignment</span>
+        <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
-
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
-                    mdl-textfield--floating-label mdl-textfield--align-right">
-
-          <!-- search icon -->
-          <label class="mdl-button mdl-js-button mdl-button--icon" for="fixed-header-drawer-exp">
-
-            <i class="material-icons">search</i>
-          </label>
-
-          <!-- expandable input field -->
-          <div class="mdl-textfield__expandable-holder">
-            <input class="mdl-textfield__input" type="text" name="header" id="fixed-header-drawer-exp" />
-          </div>
-
-        </div>
+        <!-- Navigation -->
       </div>
     </header>
-
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Dashbord</span>
+      <span class="mdl-layout-title">Ship Assignment</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="../main/index.html">Home</a>
         <a class="mdl-navigation__link" href="../main/viewPorts.html">View Ports</a>
-        <a class="mdl-navigation__link" href="../main/createPort.html">Create Ports</a>
         <a class="mdl-navigation__link" href="../main/viewShips.html">View Ships</a>
-        <a class="mdl-navigation__link" href="../main/createShip.html">Create Ships</a>
         <a class="mdl-navigation__link" href="../main/viewRoute.html">View Route</a>
-        <a class="mdl-navigation__link" href="../main/addRoute.html">Add Route</a>
       </nav>
     </div>
-
     <main class="mdl-layout__content">
       <div class="page-content">
-        <!-- Page contents should be here-->
-        <div>
-          <h4>Add a new route</h4>
-        <div>
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
-            <input class="mdl-textfield__input" type="text" id="sample1" value="" readonly tabIndex="-1">
-            <label for="sample1" class="mdl-textfield__label">Select ship</label>
+        <!-- Your content goes here -->
+        <div class="mdl-card__title mdl-card--expand">
+          <h2 class="mdl-card__title-text">Add a new route</h2>
         </div>
-        
-              
+        <br>
+        <div
+          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
+          <select onchange="onShipSelected()" required class="mdl-textfield__input" type="text" id="ships"></select>
+          <label for="sample1" class="mdl-textfield__label">Select ship</label>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div
+          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
+          <select onchange="onOriginSelected()" required class="mdl-textfield__input" type="text"
+            id="originPorts"></select>
+          <label for="sample1" class="mdl-textfield__label">Select Source Port</label>
+        </div>
+
+        <br>
+        <div
+          class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select getmdl-select__fullwidth">
+          <select onchange="onDestinationSelected()" required class="mdl-textfield__input" type="text"
+            id="destPorts"></select>
+          <label for="sample1" class="mdl-textfield__label">Select Destination Port</label>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" name="date" id="date" required>
+          <label class="mdl-textfield__label" for="sample3">Enter date of departure</label>
+        </div>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <input class="mdl-textfield__input" type="text" name="name" id="name" required>
+          <label class="mdl-textfield__label" for="sample3">Route Name</label>
+        </div>
+
+        <div>
+          <p style="color: red;" id="error"> </p>
+        </div>
+
+        <div id="errorDiv" style="background-color: crimson;">
+          <p class="mdl-textfield__label" id="shiperror"> </p>
+        </div>
+
+
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+          <br>
+          <div>
+            <div id='map' style='width: 1000px; height: 250px;'></div>
+          </div>
+        </div>
+
+        <div class="mdl-card__actions mdl-card--border">
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            onclick="addRoute()" id="addRouteBtn">
+            Add Route
+          </button>
+
+        </div>
+
+
       </div>
     </main>
   </div>
 
-  <!--MDL javascript-->
 
+  <script src="../scripts/shared.js"> </script>
+  <script
+    src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.2/mapbox-gl-directions.js'></script>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
   <script src="../scripts/addRoute.js"></script>
 </body>
 
