--- a/assignment2/main/viewPorts.html
+++ b/assignment2/main/viewPorts.html
@@ -50,50 +50,55 @@
       <span class="mdl-layout-title">Dashboard</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="../main/index.html">Home</a>
-        <a class="mdl-navigation__link" href="../main/createPort.html">Create Ports</a>
         <a class="mdl-navigation__link" href="../main/viewShips.html">View Ships</a>
-        <a class="mdl-navigation__link" href="../main/createShip.html">Create Ships</a>
         <a class="mdl-navigation__link" href="../main/viewRoute.html">View Route</a>
-        <a class="mdl-navigation__link" href="../main/addRoute.html">Add Route</a>
       </nav>
     </div>
 
     <main class="mdl-layout__content">
       <div class="page-content">
         <!-- Page contents should be here-->
-      
 
-  <div class="container">
-    <div>
-      <div>
-       
-        <h4>View Ports</h4>
 
+        <div class="container">
+
+          <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+              href="../main/createPort.html">
+              Add Port
+            </a>
+
+          </div>
+          <div>
+            <div>
+
+              <h4>View Ports</h4>
+
+            </div>
+          </div>
+
+          <br>
+
+
+          <table id="ports_table" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+
+            <tr>
+              <th>Name</th>
+              <th>Country</th>
+              <th>Type</th>
+              <th>Size</th>
+              <th>Precision</th>
+              <th>Location</th>
+            </tr>
+
+
+          </table>
+
+
+        </div>
       </div>
-    </div>
-
-    <br>
-
-
-    <table id="ports_table" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-
-      <tr>
-        <th>Name</th>
-        <th>Country</th>
-        <th>Type</th>
-        <th>Size</th>
-        <th>Precision</th>
-        <th>Location</th>
-      </tr>
-
-
-    </table>
-
-
+    </main>
   </div>
-</div>
-</main>
-</div>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="../scripts/viewPorts.js"></script>
 
