--- a/assignment2/main/viewRoute.html
+++ b/assignment2/main/viewRoute.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <title>Home</title>
     <link rel="stylesheet" href="../css/style.css">
+
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel='stylesheet'
+        href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.2/mapbox-gl-directions.css'
+        type='text/css' />
 </head>
 
 <body>
@@ -48,17 +53,36 @@
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="../main/index.html">Home</a>
                 <a class="mdl-navigation__link" href="../main/viewPorts.html">View Ports</a>
-                <a class="mdl-navigation__link" href="../main/createPort.html">Create Ports</a>
                 <a class="mdl-navigation__link" href="../main/viewShips.html">View Ships</a>
-                <a class="mdl-navigation__link" href="../main/createShip.html">Create Ships</a>
                 <a class="mdl-navigation__link" href="../main/viewRoute.html">View Route</a>
-                <a class="mdl-navigation__link" href="../main/addRoute.html">Add Route</a>
             </nav>
         </div>
 
         <main class="mdl-layout__content">
             <div class="page-content">
-                <!-- Page contents should be here-->
+
+                <p id="name"></p>
+
+                <p id="ship"></p>
+
+                <p id="origin"></p>
+
+                <p id="destination"></p>
+
+                <p id="date"></p>
+
+                <p id="distance"></p>
+
+                <p id="cost"></p>
+
+                <p id="time"></p>
+
+                <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                    <br>
+                    <div>
+                        <div id='map' style='width: 1000px; height: 300px;'></div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
@@ -67,8 +91,9 @@
     <!--MDL javascript-->
 
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
     <script src="../scripts/shared.js"></script>
-
+    <script src="../scripts/viewRoute.js"></script>
 </body>
 
 </html>
